--- a/BusHelper/BusHelper.csproj
+++ b/BusHelper/BusHelper.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.5" />
-    <PackageReference Include="bootstrap" Version="5.1.3" />
+    <!-- <PackageReference Include="bootstrap" Version="5.1.3" /> -->
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
