--- a/BusHelper/appsettings.json
+++ b/BusHelper/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Kestrel": {
+        "EndPoints": {
+            "Http": {
+                "Url": "https://*:7198"
+            }
+        }
     }
-  },
-  "AllowedHosts": "*"
 }
