--- a/BusHelper/appsettings.json
+++ b/BusHelper/appsettings.json
@@ -5,6 +5,9 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "ConnectionStrings": {
+        "DefaultConnection": "server=localhost;database=busafer;uid=root;pwd=root;"
+    },
     "AllowedHosts": "*",
     "Kestrel": {
         "EndPoints": {
