--- a/BusHelper/appsettings.json
+++ b/BusHelper/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "server=localhost;database=busafer;uid=root;pwd=123456;"
+        "DefaultConnection": "server=10.132.0.233;database=busafer;uid=root;pwd=root;"
     },
     "AllowedHosts": "*",
     "Kestrel": {
