--- a/BusHelper/appsettings.json
+++ b/BusHelper/appsettings.json
@@ -6,6 +6,12 @@
         }
     },
     "AllowedHosts": "*",
+    "JWT": {
+        "SecretKey": "b037b073ceb0c08fb3bce5f9c740d2a9a867696a",
+        "Issuer": "bus-safengine",
+        "Expires": 10,
+        "Audience": "admin"
+    },
     "Kestrel": {
         "EndPoints": {
             "Http": {
